# ClawShell-DEEP

./: AGENTS.md  CHANGELOG.md  README.md  _check_toml.py  _cm.txt  _commit_msg.txt  _fix_toml.py  _fix_toml2.py  _release.json  _repo.json  _show_toml.py  _tag_msg.txt  _verify.py  _verify_out.txt  pyproject.toml  tmp_create_repo.json
cortex/: __init__.py  broadcast.py  cli.py  core.py  insight.py  main.py  terminal_manager.py
cortex/adapters/: aliyun.py  github.py  memos.py
data/eventbus/: events_20260512.jsonl
ganglion/: __init__.py  adaptation.py  main.py  perception.py  plugin_manager.py
ganglion/adapters/: openclaw.py
neural_bus/: __init__.py  event_bus.py  protocol.py  transport.py
scripts/: install.py
shared/: __init__.py  config.py  models.py  types.py
storage/: __init__.py  knowledge_store.py
tests/: test_cortex.py  test_ganglion.py  test_neural_bus.py  test_shared.py
